fixed horizontal scrollbar && added prism code template in git/01 && added divider between content && fixed some minor layout changes

--- a/src/sass/layout/contentPage.scss
+++ b/src/sass/layout/contentPage.scss
@@ -47,7 +47,6 @@
     .indexes {
       display: flex;
       flex-direction: column;
-      // gap: 4.5rem;
       justify-content: space-around;
       a {
         text-transform: uppercase;
@@ -131,50 +130,25 @@
         }
       }
 
-      p ~ p {
-        border-top: 3px solid red;
-      }
-
-      .content {
-        margin-left: 2rem;
-        margin-bottom: 4rem;
-        padding-left: 1rem;
-        padding-right: 5rem;
-        line-height: 5.5rem;
-        font-family: "IBM Plex Mono", monospace;
-
-        .codes {
-          //////////////////// overflow => scroll
-        }
-
-        .code-template-left {
-          font-family: "Share Tech Mono", monospace;
-          font-size: 2.5rem;
-          background-color: #bebebe;
-          color: white;
-          padding: 0.8rem 1rem;
-        }
-        .code-template-right {
-          font-family: "Share Tech Mono", monospace;
-          font-size: 2.5rem;
-          background-color: #bebebe;
-          color: white;
-          padding: 0.8rem 1rem;
-        }
         .code-explain {
           padding: 0rem 5rem 1rem 5rem;
-          margin-left: 4rem;
           margin-top: 6rem;
           text-transform: capitalize;
           line-height: 6rem;
           display: block;
           width: 100%;
           position: relative;
+          font-family: "IBM Plex Mono", monospace;
+
+          &:not(:last-of-type){
+            border-bottom: 1px solid gray;
+            margin-bottom: 4rem;
+          }
 
           &-header {
             background-color: #d6d5d5e3;
             color: black;
-            padding: 0 1.9rem;
+            padding: .8rem 1.9rem;
             text-transform: lowercase;
             clip-path: polygon(3% 0, 100% 0%, 96% 100%, 0% 100%);
           }
@@ -204,9 +178,7 @@
           &::after {
             content: "code-explain";
             text-transform: uppercase;
-            font-family: monospace;
             margin-top: -5rem;
-            margin-right: -5rem;
             font-size: 1.9rem;
             padding: 0 2rem;
             transform: scale(0.6);
@@ -221,7 +193,6 @@
             margin-top: 1.6rem;
           }
         }
-      }
     }
   }
   nav {
